<?xml version="1.0"?>
<package format="2">
  <name>opject_planning</name>
  <version>0.1.0</version>
  <description>The opject_planning package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <author email="horibe.takamasa@gmail.com">Takamasa Horibe</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>util</depend>
  
  <!-- <depend>qpoases_vendor</depend> -->
</package>
